# time_planer

./: .envrc  .gitignore  db.sqlite3  pyproject.toml  run_on_osx.sh
assets/sass/: admin.css  admin.css.map  admin.sass  styles.css  styles.css.map  styles.sass
settings/: common.py  urls.py
templates/: time_plan.pug
templates/admin/: base_site.html
times/: admin.py  apps.py  models.py  views.py
times/migrations/: 0001_initial.py  0002_unit_plan_unit.py  0003_alter_plan_options_alter_unit_options_and_more.py
